--- a/heroku.yml
+++ b/heroku.yml
@@ -2,6 +2,6 @@ build:
   docker:
     web: Dockerfile
 run:
-  web: docker run --name my-first-redis -p 6379:6379 -d redis
+  web: docker run --name redis -p 6379:6379 -d redis
 
   
